# Mandelbrot-Set

./: CMakeLists.txt  main.cpp
src/: App.cpp  App.h  Complex.h  GraphWidget.cpp  GraphWidget.h  MainWindow.cpp  MainWindow.h  header.h
